@@ -37,7 +37,7 @@ my $prereqs  = {
     'Moo' => '1.006',
     'MooX::ClassStash' => '0.005',
     'Try::Tiny' => '0.22',
-    'Type::Tiny' => '1.000003',
+    'Type::Tiny' => '1.000002',
     'Unexpected' => 'v0.29.0',
     'namespace::autoclean' => '0.19',
     'namespace::clean' => '0.25',
