@@ -4,7 +4,7 @@ Name
 
 Version
 
-    This document describes version v0.45.$Rev: 1 $ of File::DataClass
+    This document describes version v0.45.$Rev: 5 $ of File::DataClass
 
 Synopsis
 
