@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c8e5276aaa70ae809610c4e40497ebe140da4b32 Build.PL
-SHA1 1a7544dc1823bb29d958990e56d6e221bba72ea9 Changes
+SHA1 b15d9662694318d31e2b3dabeca5ec4f262c28bd Build.PL
+SHA1 0fbd72733b8956a243765cb7304770145509f7fd Changes
 SHA1 b8415dc6fd6293b168bcc15a552f4383175e2f2f LICENSE
 SHA1 4210091bd405fcb6099d8d056e7c2694d641a591 MANIFEST
-SHA1 6ae8b180ecae628cfede3edc5877c5c268fc27df META.json
-SHA1 ef87bfa69278b5660ce7a923dbce3b15b4a72f36 META.yml
-SHA1 a40ea8ff9d1d3cef69beec325f1ecfc97a747601 README
-SHA1 4563cb9b27c3f687c4c88fbb703fbd15277be26c lib/File/DataClass.pm
+SHA1 3703cb9b068e63b827198d65fb787e56a57496c3 META.json
+SHA1 8c6e737001208a4bcce423637a07ba13df14757a META.yml
+SHA1 19312c5c87068a659c27d4ce53a8a3ad51b4c5a8 README
+SHA1 109fa77f06389d32359218c7b09e97f3fa0c4fdf lib/File/DataClass.pm
 SHA1 0a527e8cf87ac6260e885865f0d1676635af4aea lib/File/DataClass/Cache.pm
 SHA1 77e64f61bc3a64971d29dbad8f433480eae979fb lib/File/DataClass/Constants.pm
 SHA1 7018f6a179cf4d91103795b8d2f07a3b6bcd706a lib/File/DataClass/Exception.pm
@@ -63,11 +63,11 @@ SHA1 c0908aadd4d891db9a460dace4f012b6e8a36eff t/other.json
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iQEcBAEBAgAGBQJT8oUTAAoJEK492j4Im1BpXE4IAMN/s/nuEBTrc6PCyd8cjZwL
-w9dkkdziSp2/RZtG6nwHk82YIjDrASVJ7IHE4g8DLD97KjSL/Nx+T9PMeAaYzRcL
-683keEtk+nuTYq/SRQtZfUQtGpee1r/96Ib2jxqf0Mcrv4mHInXCNzjWksIRgqO5
-z6DvCfMV7jyRRdCerhbnUGYEtt2qvYTBHTnA16kZOfTimlE+QrmHyy3fWLC4nWmw
-qQjBIiywqf93O4/Ns2K4mx9l9GJQqOEovHmBX7iXHJQyDD3V0sKbTcRMXnoeyyEv
-2crizOpAMpFmuTP+NAHchFnPwkIDpo4I6LDcjgVFaFbNMifrhh6grFHOSoqgxb4=
-=WRMf
+iQEcBAEBAgAGBQJT/IB9AAoJEK492j4Im1BptYkH/AngPLnSYqAj5eHSp/792Jb1
+BJA9SL7Q8ydAZfKG7S5/LAdqADMIAjuUQlVO10dGYacLq1ngE3cAAEY1uvD+fFIE
+ABYadQ/Qnf/sL/Rkl35NvA1t/BWtLpcvfmzM2Yw779Ui5hAnwW4Qvs+wFDFEZsrX
+ZNHhJhVw4l5sCz53+dVJ6aOhcA9KT6K+PzX9VYgIClfpRJWQiK5bXMmkH3zzPsNF
+kIe8BoSt+CSV8pFxU+htP0kuHTgfB7PmFD8AKmek0VwNDFfhevtv2ys1WTHH00Ot
+bmVmLz/qvdEXMj4UabCQGxgxMQeYNUQ7H0YXDmBV1LvmhbJ0oeq8YedRlklCizk=
+=cuV5
 -----END PGP SIGNATURE-----
