@@ -1,5 +1,10 @@
 Revision history for File::DataClass
 
+          - Added MANIFEST to repository
+          - Fixed dependency version
+          - Added Travis integration and badges
+          - Adjusted toolchain for Github
+
 0.45.1    2014-08-18 23:58:19
           - Bumped Type:Tiny version RT#98113
 
